fixing FUCKING main content resizing with scrollbar issue (AMEN)

--- a/src/styles/NotesTable.css
+++ b/src/styles/NotesTable.css
@@ -1,3 +1,14 @@
+div.scroll {
+    background-color: #fed9ff;
+    width: 80%;
+    height: 80%;
+    overflow-x: hidden;
+    overflow-y: auto;
+    text-align: center;
+    padding: 20px;
+}
+
+/*
 .scrollable {
     box-shadow: 0 0 20px 8px rgba(0, 0, 0, 0.2);
     width: 80%;
@@ -34,3 +45,4 @@ table td {
 .action{
     width: 30%;
 }
+*/
